k8s-manifests/grafana_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 472
        runAsUser: 472
        runAsGroup: 472
      containers:
        - name: grafana-sc-dashboard
          image: kiwigrid/k8s-sidecar:1.28.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: sc-dashboard-volume
              mountPath: /tmp/dashboards

        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-permanent-storage
              mountPath: /var/lib/grafana
            - name: sc-dashboard-volume
              mountPath: /tmp/dashboards
            - name: tls-certs-volume
              mountPath: /etc/grafana/certs
              readOnly: true
      volumes:
        - name: grafana-permanent-storage
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: sc-dashboard-volume
          emptyDir: {}
        - name: tls-certs-volume
          secret:
            secretName: grafana-tls-secret
