k8s-manifests/grafana_deploy_copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-db-storage
              mountPath: /var/lib/grafana
      volumes:
        - name: grafana-db-storage
          persistentVolumeClaim:
            claimName: grafana-pvc
