k8s-manifests/jaeger_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
        ports:
          - containerPort: 16686 # UI
          - containerPort: 4317  # OTLP gRPC
          - containerPort: 4318  # OTLP HTTP
        volumeMounts:
        - name: jaeger-storage
          mountPath: /data
      volumes:
      - name: jaeger-storage
        persistentVolumeClaim:
          claimName: jaeger-pvc
