k8s-manifests/alertmanager_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  ports:
  - port: 9093
    targetPort: 9093
    name: http
  selector:
    app: alertmanager
