k8s-manifests/blackbox_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter-service
  namespace: monitoring
spec:
  selector:
    app: blackbox-exporter
  ports:
    - port: 9115
      targetPort: 9115
